# yogi

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  cache.json  main.cpp  test.io  yogi.cpp
compiler/: compiler.cpp  compiler.h
compiler/antlr/grammars/: ArraysGrammar.g4  DictionaryGrammar.g4  ExportGrammar.g4  Grammar.g4  ImportGrammar.g4  LiteralsGrammar.g4  MembersGrammar.g4  VariableGrammar.g4
compiler/antlr/tokens/: DataTypeTokens.g4  MainTokens.g4  ReservedWords.g4  Tokens.g4
compiler/cache/: cache.cpp  cache.h
compiler/core/: core.h
compiler/core/linker/: Linker.cpp  Linker.h
compiler/core/llvm/: llvm.h
compiler/linker/: linker.h
compiler/modules/: runtime.bc
compiler/parser/: Parser.cpp  Parser.h
compiler/scanner/: Scanner.cpp  Scanner.h
compiler/semantic/: BaseSemantic.cpp  BaseSemantic.h  semantic.h
compiler/semantic/arrays/: Arrays.cpp  Arrays.h
compiler/semantic/base/: BaseSemantic.cpp  BaseSemantic.h
compiler/semantic/dictionaries/: Dictionaries.cpp  Dictionaries.h
compiler/semantic/imports/: Import.cpp  Import.h  ImportSemantic.cpp
compiler/semantic/scopes/: Scope.cpp  Scope.h
compiler/semantic/src/: semantic.cpp
compiler/semantic/typechecker/: TypeChecker.cpp  TypeChecker.h
compiler/semantic/variables/: Variables.cpp  Variables.h  helpers.h
compiler/utils/: utils.h
compiler/utils/errors/: AntlrErrorListener.cpp  AntlrErrorListener.h  Errors.cpp  Errors.h
compiler/utils/helpers/: Helpers.cpp  Helpers.h
compiler/visitors/arrays/: ArraysVisitor.cpp  ArraysVisitor.h
compiler/visitors/base/: BaseVisitor.cpp  BaseVisitor.h
compiler/visitors/conditions/: ConditionsVisitor.cpp  ConditionsVisitor.h
compiler/visitors/dictionaries/: DictionaryVisitor.cpp  DictionaryVisitor.h
compiler/visitors/exports/: ExportVisitor.cpp  ExportVisitor.h
compiler/visitors/expressions/: ExpressionVisitor.cpp
compiler/visitors/imports/: ImportsVisitor.cpp  ImportsVisitor.h
compiler/visitors/literals/: LiteralsVisitor.cpp  LiteralsVisitor.h
compiler/visitors/members/: MembersByType.cpp  MembersByType.h  MembersVisitor.cpp
compiler/visitors/modules/: ModulesVisitor.cpp  ModulesVisitor.h
compiler/visitors/nodes/: ArrayNode.h  BaseNode.h  ExportNode.h  ExpressionNode.h  ImportNode.h  LiteralNode.h  MembersNode.h  ProgramNode.h  StatementNode.h  VariableNode.h  nodes.h
compiler/visitors/program/: ProgramVisitor.cpp  ProgramVisitor.h
compiler/visitors/variables/: VariablesVisitor.cpp
compiler/wrapper/: wrapper.cpp  wrapper.h
inputs/: dev.io  foo.io  main.io  utils.io  variables.io
libs/catch2/: catch_amalgamated.cpp  catch_amalgamated.hpp
linker/: linker.cpp  linker.h  linker_bind.cpp
past/: past.h
runtime/: CMakeLists.txt  yogi.cpp
runtime/includes/: runtime.h
runtime/src/: runtime.cpp
src/: cromio.cpp  cromio.h  yogi.cpp
src/antlr/grammars/: ArraysGrammar.g4  ConditionsGrammar.g4  DictionaryGrammar.g4  ExpressionsGrammar.g4  Grammar.g4  LiteralsGrammar.g4  VariableGrammar.g4
src/antlr/tokens/: ConditionsTokens.g4  FragmentTokens.g4  MainTokens.g4  MainTokens.tokens  NumberTokens.g4  StringTokens.g4
src/ast/: ast.h
src/ast/arrays/: ArraysVisitor.cpp  ArraysVisitor.h
src/ast/base/: BaseVisitor.cpp  BaseVisitor.h
src/ast/dictionaries/: DictionaryVisitor.cpp  DictionaryVisitor.h
src/ast/expressions/: ExpressionVisitor.cpp  ExpressionVisitor.h
src/ast/literals/: LiteralsVisitor.cpp  LiteralsVisitor.h
src/ast/members/: MembersByType.cpp  MembersByType.h  MembersVisitor.cpp  MembersVisitor.h
src/ast/nodes/: ArrayNode.h  BaseNode.h  BlockNode.h  DictionaryNode.h  ExpressionNode.h  LiteralNode.h  MemberAccessNode.h  MembersNode.h  ProgramNode.h  StatementNode.h  VariableNode.h  nodes.h
src/ast/program/: ProgramVisitor.cpp  ProgramVisitor.h
src/ast/variables/: VariablesVisitor.cpp  VariablesVisitor.h
src/core/: core.h
src/core/emitter/: CodeEmitter.cpp  CodeEmitter.h
src/core/ir/: IR.h
src/includes/cromio/: cromio.h  wrapper.cpp  wrapper.h
src/includes/yogi/: wrapper.cpp  wrapper.h  yogi.h
src/libs/: json.hpp
src/parser/grammars/: ArraysGrammar.g4  DictionaryGrammar.g4  ExpressionsGrammar.g4  Grammar.g4  LiteralsGrammar.g4  MembersGrammar.g4  VariableGrammar.g4
src/parser/tokens/: MainTokens.g4  NumberTokens.g4  StringTokens.g4  Tokens.g4
src/runtime/string/: string.cpp  string.h
src/semantic/: BaseSemantic.cpp  BaseSemantic.h
src/semantic/arrays/: Arrays.cpp  Arrays.h
src/semantic/dictionaries/: Dictionaries.cpp  Dictionaries.h
src/semantic/scopes/: Scope.cpp  Scope.h
src/semantic/variables/: Variables.cpp  Variables.h  helpers.h
src/utils/: utils.h
src/utils/errors/: AntlrErrorListener.cpp  AntlrErrorListener.h  Error.cpp  Error.h  Errors.cpp  Errors.h
src/utils/helpers/: Helpers.cpp  Helpers.h
src/utils/types/: Types.cpp  Types.h
src/utils/wrapper/: wrapper.cpp
src/visitors/: visitors.h
src/visitors/arrays/: ArraysVisitor.cpp  ArraysVisitor.h
src/visitors/base/: BaseVisitor.h
src/visitors/conditions/: ConditionsVisitor.cpp  ConditionsVisitor.h
src/visitors/dictionaries/: DictionaryVisitor.cpp  DictionaryVisitor.h
src/visitors/expressions/: ExpressionVisitor.cpp  ExpressionVisitor.h
src/visitors/literals/: LiteralsVisitor.cpp  LiteralsVisitor.h
src/visitors/members/: MembersByType.cpp  MembersByType.h  MembersVisitor.cpp  MembersVisitor.h
src/visitors/nodes/: ArrayNode.h  BaseNode.h  ConditionsNode.h  ExpressionNode.h  nodes.h  (+2 more)
tests/: test.cpp  test_expressions.cpp  test_variables.cpp  tests.h
tests/arrays/: arrays.test.cpp  arrays_integer.test.cpp  arrays_string.test.cpp
tests/conditions/: conditions.test.cpp  if_conditions.test.cpp
tests/expressions/: bitwise_expressions.test.cpp  expressions.test.cpp  relational_expressions.test.cpp
tests/literals/: boolean_literals.test.cpp  float_literals.test.cpp  integer_literals.test.cpp  none_literals.test.cpp  string_literals.test.cpp
tests/variables/: variables.h  variables.test.cpp  variables_members.test.cpp  variables_reassignment.test.cpp
yogi/: Yogi.cpp  Yogi.h
(+42 files in other folders)
