cmake_minimum_required(VERSION 3.10)
project(yogi_runtime LANGUAGES C CXX)

add_library(${PROJECT_NAME} STATIC
        src/runtime.cpp
)

target_include_directories(${PROJECT_NAME} PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/includes
)

message(STATUS "Runtime include: ${CMAKE_CURRENT_SOURCE_DIR}/includes")